Fixed Firefox flexbox and scrollbar issues

--- a/src/components/ImageSlider/ImageSlider.module.css
+++ b/src/components/ImageSlider/ImageSlider.module.css
@@ -37,8 +37,15 @@
     padding: 3px 0;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
 .images-slider .container::-webkit-scrollbar {
     display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.images-slider .container {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 
 .images-slider img {
@@ -47,6 +54,7 @@
     cursor: pointer;
     border: 2px solid #ffffff;
     box-shadow: 0 0 10px var(--box-shadow-color);
+    flex-shrink: 0;
 }
 
 .images-slider img.active {
